fix overflows

--- a/src/components/mention_link/mention_link.scss
+++ b/src/components/mention_link/mention_link.scss
@@ -3,12 +3,12 @@
 .MentionLink {
   position: relative;
   white-space: normal;
-  display: inline-flex;
+  display: inline;
   color: var(--link);
 
   & .new,
   & .original {
-    display: inline-block;
+    display: inline;
     border-radius: 2px;
   }
 
@@ -38,14 +38,18 @@
     user-select: all;
   }
 
-  .short.-with-tooltip,
-  .you {
+  & .short.-with-tooltip,
+  & .you {
     user-select: none;
   }
 
   & .short,
   & .full {
     white-space: nowrap;
+  }
+
+  .shortName {
+    white-space: normal;
   }
 
   .new {
