--- a/src/components/mentions_line/mentions_line.scss
+++ b/src/components/mentions_line/mentions_line.scss
@@ -1,11 +1,8 @@
 .MentionsLine {
+  word-break: break-all;
+
   .showMoreLess {
     white-space: normal;
     color: var(--link);
-  }
-
-  .fullExtraMentions,
-  .mention-link:not(:last-child) {
-    margin-right: 0.25em;
   }
 }
